--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,17 @@
           <input class="w3-input w3-border w3-sand" name="restaurant_id" type="text">
         </p>
         <p>
+          <label class="w3-text-brown"><b>Barrio del restaurante</b></label>
+          <input class="w3-input w3-border w3-sand" name="borough" type="text">
+        </p>
+        <p>
+          <label class="w3-text-brown"><b>Nombre del restaurante</b></label>
+          <input class="w3-input w3-border w3-sand" name="nombre" type="text">
+        </p>
+        <p>
           <button class="w3-btn w3-brown">Buscar</button>
         </p>
+        
       </form>
     </div>
 
